# hackathon-devops-demo

./: .env.example  .gitignore  LICENSE  README.md  event_store.json  hackathon-devops-demo.code-workspace  main.py  pyproject.toml  requirements.txt  security_report.md  test_demo.py
samples/iac/insecure/: main.tf
scripts/: run_local.sh  seed_demo.sh
src/: __init__.py
src/gateway/: __init__.py  main.py  render.py  routes_github.py  routes_slack.py  security.py  state.py
src/mcp/: __init__.py  orchestrator.py  schemas.py  server.py
src/mcp/tools/: __init__.py  ai_fix.py  iac_scan.py  pr.py  slack.py
tests/: test_gateway_smoke.py  test_mcp_smoke.py
